v1.4.3 - fixed css gap in FinderList.js

--- a/src/styles/Finder.css
+++ b/src/styles/Finder.css
@@ -106,6 +106,7 @@
   flex-direction: column;
   overflow-x: hidden;
   overflow-y: scroll;
+  gap: 0;
 }
 .finder .finder-list::-webkit-scrollbar {
   display: none;
